5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1758_672.log
== TEST (2019-05-23 10:14:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("digite o numero int: "))
v1 = ones(n, dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 4
    v1 = ones(n, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("digite o numero int: "))
v1 = ones(n, dtype = int)
print(v1)
-- ERROR:
File "XXXX", line 4
    v1 = ones(n, dtype = int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("digite o numero int: "))
v1 = ones(n, dtype = eval)
print(v1)
-- ERROR:
File "XXXX", line 4
    v1 = ones(n, dtype = eval)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("digite o numero int: ")))
v1 = ones(n, dtype = int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:15:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("digite o numero int: ")))
v1 = ones(n, dtype = int)
print(v1)
-- EXECUTION TIME:
0.37162
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
